[tool.poetry]
name = "robo-appian-pr"
version = "0.0.13"
description = "Automate your Appian code testing with Python. Boost quality, save time."
authors = ["Dinil Mithra <dinilmithra.mailme@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "robo_appian"}]
homepage = "https://github.com/dinilmithra/robo_appian"
repository = "https://github.com/dinilmithra/robo_appian.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.25.1"
playwright = "^1.52.0"
tomli = "^2.0.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-macros-plugin = "^1.0.0"
pytest = "^8.0.0"

[tool.pytest.ini_options]
markers = [
    "e2e: marks end-to-end tests that require APP_URL and explicit enablement",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
