[tool.poetry]
name = "robo-appian-pr"
version = "0.0.15"
description = "Automate your Appian code testing with Python. Boost quality, save time."
authors = ["Dinil Mithra <dinilmithra.mailme@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "robo_appian"}]
homepage = "https://github.com/dinilmithra/robo_appian"
repository = "https://github.com/dinilmithra/robo_appian.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.5"
playwright = "^1.58.0"
greenlet = ">=3.1.1,!=3.2.5,<4.0.0"
tomli = "^2.4.1"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}
mkdocs-macros-plugin = "^1.5.0"
pytest = "^8.4.2"
black = "^25.11.0"

[tool.pytest.ini_options]
markers = [
    "e2e: marks end-to-end tests that require APP_URL and explicit enablement",
]

[tool.black]
target-version = ["py39"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
